tests/compile_fail/eq_incomparable.cc
// SPDX-License-Identifier: MIT
#include <umitest/check.hh>

void test() {
    umi::test::check_eq(42, "hello");
}
